--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block content
   h1 What's-iz-name
   div.leftContainer
-    img(src="./images/#{pic}")
+    img(src="./images/#{imageSrc}")
   div.rightContainer Guess the name
         ul
           li
