--- a/views/index.jade
+++ b/views/index.jade
@@ -1,14 +1,12 @@
 extends layout
 
 block content
-  h1 What's-iz-name
-  div.leftContainer
-    img(src="./images/#{imageSrc}")
-  div.rightContainer Guess the name
+    h1 What's-iz-name
+    div.leftContainer
+        img(src="./images/#{imageSrc}")
+
+    div.rightContainer Guess the name
         ul
-          li
-            a(href="./index/?vote=a") Koala
-          li
-            a(href="./index/?vote=b") Kooala
-          li
-            a(href="./index/?vote=c") Cooala
+            each link in links
+                li
+                    a(href="#{link.href}")= link.text
