--- a/views/quiz.jade
+++ b/views/quiz.jade
@@ -3,7 +3,7 @@ extends layout
 block content
     h1 What's-iz-name
     div.leftContainer
-        img(src="./images/#{imageSrc}")
+        img(src="/images/#{imageSrc}")
 
     div.rightContainer Guess the name
         ul
