view changes to display score

--- a/views/quiz.jade
+++ b/views/quiz.jade
@@ -2,6 +2,9 @@ extends layout
 
 block content
     h1 What's-iz-name
+    div.score
+        h1 Score #{score}
+
     div.leftContainer
         img(src="#{imageSrc}")
 
