--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,7 @@ html{ margin:0; padding:0; height:100%; width:100%; }
 
 body {
     margin:0; padding:0; height:100%; width:100%;
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    font-family:"Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
    /*1 1 2 3 5 8 13 21 34 55 */
@@ -21,6 +21,8 @@ div.rightContainer {
     margin-left:8%;
     display: inline-block;
     float:left;
+    font-size: 2em;
+
 }
 
 div.score{
@@ -37,4 +39,5 @@ div img{
 
 ul {
     list-style-type: lower-latin;
+
 }
