add create.js to solution

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,7 @@ html{ margin:0; padding:0; height:100%; width:100%; }
 
 body {
     margin:0; padding:0; height:100%; width:100%;
-    font-family:"Lucida Grande", Helvetica, Arial, sans-serif;
+    font-family:sans-serif;
 }
 
    /*1 1 2 3 5 8 13 21 34 55 */
