--- a/views/quiz.jade
+++ b/views/quiz.jade
@@ -2,12 +2,23 @@ extends layout
 
 block headers
     script(src='http://code.jquery.com/jquery-1.9.1.min.js')
-    script(type='text/javascript', src='/scripts/createjs-2013.02.12.min.js')
+    script(type='text/javascript', src='/scripts/external/underscore-min-1.4.4.js')
+    script(type='text/javascript', src='/scripts/external/createjs-2013.02.12.min.js')
 
-    script(type='text/javascript', src="/scripts/quizPreLoad.js")
+    script(type='text/javascript', src="/scripts/game.js")
+    script(type='text/javascript')
+        //initialize
+        (function () {
+            $ ( document ).ready ( function () {
+                var preLoad = new Game.PreLoad ( $('#scoreBox') );
+                    preLoad.overrideLinkAction ();
+                preLoad.loadNextQuestion ( window.location.toString () );
+            } );
+        } ());
 
 block content
-    h1 What's-iz-name
+    h1(style='margin-bottom:0px') What's-iz-name
+
 
     div.score
         h1(id='scoreBox') Score #{score}
