better tracking of client side quiz number
also ,pre-load 2 quiz questions

--- a/views/quiz.jade
+++ b/views/quiz.jade
@@ -18,6 +18,8 @@ block headers
                                 new Game.PreLoad ( $('#scoreBox') );
 
                 preLoad.overrideLinkAction ();
+                //preload 2 questions
+                preLoad.loadNextQuestion ( window.location.toString () );
                 preLoad.loadNextQuestion ( window.location.toString () );
             } );
         } ());
