mitigate session problem with concurrent requests from same user
mongo storage is waked

--- a/views/quiz.jade
+++ b/views/quiz.jade
@@ -19,8 +19,7 @@ block headers
 
                 preLoad.overrideLinkAction ($ ( 'a' ));
                 //preload 2 questions
-                preLoad.loadNextQuestion ( window.location.toString () );
-                preLoad.loadNextQuestion ( window.location.toString () );
+                preLoad.loadNextQuestions ( window.location.toString () );
             } );
         } ());
 
