--- a/views/quiz.jade
+++ b/views/quiz.jade
@@ -24,7 +24,7 @@ block headers
         } ());
 
 block content
-    h1(style='margin-bottom:0px') What's-iz-name
+    h1(style='margin-bottom:0px') What's the name
 
     canvas#scoreCanvas(height='89',width='233')
         div.score
