get rid of jade deprecation warning

--- a/views/quiz.jade
+++ b/views/quiz.jade
@@ -8,7 +8,7 @@ block headers
     script(type='text/javascript', src="/scripts/game.js?v=4")
     script(type='text/javascript', src='/scripts/animate.js?v=4')
 
-    script(type='text/javascript')
+    script(type='text/javascript').
         //initialize
         (function () {
             $ ( document ).ready ( function () {
