--- a/views/register.jade
+++ b/views/register.jade
@@ -2,8 +2,8 @@ extends layout
 
 block content
   h1 The facegame
-  form(action='/login',method='post')
+  form(action='/register',method='post')
       |Email
       input(type='text',name='email')
       input(type='password',name='password')
-      input(type='submit',value='LogIn')
+      input(type='submit',value='Register')
