add links to login and register on quiz page

--- a/views/quiz.jade
+++ b/views/quiz.jade
@@ -14,14 +14,19 @@ block headers
             $ ( document ).ready ( function () {
                 var preLoad = new Game.PreLoad ( new Game.Animate ( 'scoreCanvas' , 'scoreBox' ) ) ;
 
-                preLoad.overrideLinkAction ($ ( 'a' ));
+                preLoad.overrideLinkAction ($ ( '#quizQustion a' ));
                 //preload 2 questions
                 preLoad.loadNextQuestions ( window.location.toString () );
             } );
         } ());
 
 block content
-    h1(style='margin-bottom:0px') What's-iz-name
+    div(style="float:right;margin:2px 21px 0px 0px")
+        a(href="/login") login
+        | &nbsp;/&nbsp;
+        a(href="/register") register
+    |&nbsp
+    h1(style='margin-bottom:0px;margin-top:0px') What's-iz-name
 
     canvas#scoreCanvas(height='89',width='233')
         div.score
