get rid of login/register on quiz page
replace with "remember me" for json request

--- a/views/quiz.jade
+++ b/views/quiz.jade
@@ -22,10 +22,7 @@ block headers
 
 block content
     div(style="float:right;margin:2px 21px 0px 0px")
-        a(href="/login") login
-        | &nbsp;/&nbsp;
-        a(href="/register") register
-    |&nbsp
+        a(href="/login") remember me
     h1(style='margin-bottom:0px;margin-top:0px') What's-iz-name
 
     canvas#scoreCanvas(height='89',width='233')
