--- a/views/login.jade
+++ b/views/login.jade
@@ -1,12 +1,16 @@
 extends layout
 
 block content
-  h1 The facegame
+  h1 The facegame Login
   form(action='/login',method='post')
-      |Email &nbsp;
-      input(type='text',name='email')
-      br
-      |Password &nbsp;
-      input(type='password',name='password')
-      br
-      input(type='submit',value='LogIn')
+      div
+          |Email
+          input(type='text',name='email')
+      div
+          |Password &nbsp;
+          input(type='password',name='password')
+      div
+          input(type='submit',value='LogIn')
+
+  p Not yet a member? Register
+      a(href='/register') here
