--- a/views/register.jade
+++ b/views/register.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 The facegame
+  h1 The facegame Registration
   form(action='/register',method='post')
       |Email &nbsp;
       input(type='text',name='email')
